--- a/대본.md
+++ b/대본.md
@@ -1,12 +1,7 @@
-# 안녕하세요 친구관계지침서 좋은친구가 되기 위한 첫걸음 발표를 시작하겠습니다.
-# 챕터는 0번 기억해두면 좋은 명언들,
-# 1번 큐 앤 에이 와 설문조사,
-# 2번 좋은 친구 사귀는 방법
-# 3번 대화하는 방법
-# 4번 지켜야 할 점
-# 5번 피하면 좋은 친구, 총 여섯 개의 챕터가 있습니다.
+# 안녕하세요 친구 관계 지침서 좋은 친구가 되기 위한 첫걸음 발표를 시작하겠습니다.
+# 챕터는 0번 기억해두면 좋은 명언들, 1번 큐 앤 에이 와 설문조사, 2번 좋은 친구 사귀는 방법, 3번 대화하는 방법, 4번 지켜야 할 점 5번 피하면 좋은 친구, 총 여섯 개의 챕터가 있습니다.
 # 우선 챕터 0번 기억해두면 좋은 명언들 부터 하겠습니다.
-# 첫번째 명언은 친구는 모든 것을 나눈다입니다. 저는 이때 물질적으로도 나눌 수 있고 정신적으로도 나눌 수 있다고 생각합니다.
+# 첫번째 명언은 친구는 모든 것을 나눈다입니다. 물질적으로도 나눌 수 있고 정신적으로도 나눌 수 있다고 생각합니다.
 # 두번째 명언은 친구는 기쁨은 두 배로 늘리고, 슬픔은 절반으로 줄인다. 이 명언은 고대 로마의 철학자인 키케로의 명언입니다.
 # 세번째 명언은 너와 같은 길을 걷는 사람들의 웃음을 위해 그들의 짐을 나누어서 들어주어라. 이 명언은 피타고라스의 명언 중 하나입니다.
 # 네번째 명언은 보이지 않는 곳에서 나를 좋게 말하는 사람이 진정한 친구이다입니다. 나쁘게 말하는 건 "쟤는 별로야" 같은 게 있구요. 좋게 말하는 건 "얘가 이래서 정말 좋았어"같은 게 있습니다.
@@ -20,16 +15,16 @@
 # 안 갚는 것은 단순히 금전상의 손해가 아니라 친구 관계에 심각한 금이 간 것과 다름 없습니다.
 # 나나 다른 사람의 말을 경청해주는 사람을 사귀세요. 다른 사람의 말을 잘 듣지 않는데 당신의 말은 잘 들을까요? 친구 관계에서는 대화가 가장 중요합니다.
 # 3번 챕터는 대화하는 방법입니다.
-# 첫 번째는 친구에게 말할 때 '욕설'을 줄이라는 내용입니다. 자신은 친구 사이에 "욕설 정도는 괜찮겠지"라고 생각하고 욕을 쓰겠지만, 친구는 '나는 욕설 싫어하는 데..'라며 싫어할 수도 있습니다.
-# 친구에게 적당한 반응을 해주세요. "너.무. 대.단.해."와 같은 반응 말고 '음~' 등의 간단한 반응이라도 해주세요. 여기서 말하는 반응은 친구의 말에 대답하는 의미를 지니고 있어요.
+# 첫 번째는 친구에게 말할 때 '욕설'을 줄이라는 내용입니다. 친구 사이에 "욕설 정도는 괜찮겠지"라고 생각하고 욕을 쓰지만, 친구는 '나는 욕설 싫어하는 데..'라며 싫어할 수도 있습니다.
+# 친구에게 적당한 반응을 해주세요. 여기서 말하는 반응은 친구의 말에 대답하는 의미를 지니고 있어요.
 # 그렇게 하면 어떻게 될까요? 친구가 "아 얘는 내말을 잘 들어주는 구나"라는 생각을 할것입니다.
 # 친구를 사귀었을 땐 서로에 대해 질문하고 응답하며 서로 알아가세요. 아래 예시 처럼요.
 # 네번째 챕터는 친구 사이에 지켜야 할 점입니다.
-# 친구가 실수했을 때 너무 따지지 말고 넘어가세요. 모든 사람은 실수할 수도 있습니다.
+# 친구가 실수했을 때 너무 따지지 말고 넘어가세요. 사람은 실수할 수도 있습니다.
 # 약속을 했으면 지키세요. 당연한 이야기지만, 안 지키는 사람이 너무 많습니다. 잘 지키면 그 친구의 나에 대한 신뢰도가 증가합니다.
-# '안 돼'라고 해야 할 땐 단호하게 말하세요. 어른들이 '애 버릇 나빠진다'와 같은 이유인데요. 친구 사이이라도 단호해야 할 때는 단호해야 합니다.
+# '안 돼'라고 해야 할 땐 단호하게 말하세요. 친구 사이이라도 단호해야 할 때는 단호해야 합니다.
 # 마지막 챕터는 피하면 좋은 친구입니다. 남을 흉보는 사람은 피하세요. 남을 흉본다는 것은 상대방도 흉 볼 수 있다는 것입니다.
 # 그러다가 동조 현상으로 같이 남의 흉을 볼 수 있어요.
-# 많이 싸우는 친구는 피하세요. 특히 신체적으로 싸우는 사람을 피하세요. 나중에는 당신도 똑같이 될 수 있습니다.
+# 많이 싸우는 친구는 피하세요. 특히 신체적으로 싸우는 사람을 피하세요.
 # 음주와 흡연을 권하는 사람은 피하세요. 애초에 불법이고 건강에도 좋지 않아요.
 # 끝났습니다. 감사합니다.
